    (Closes: #722621)
  * Fix database schema version: 2.5.2
  * Fix dependencies to the database backend packages
  * Fix packages post scripts: purge /etc/oar, /var/lib/oar
  * Fix oardo.c compilation warning
  * Fix prologues and epilogues configuration files permissions

  [ Vincent Danjean ]
  * Bump Standard-Version (no change needed)

 -- Pierre Neyron <pierre.neyron@free.fr>  Fri, 20 Sep 2013 08:44:51 +0200

oar (2.5.2-3.1) unstable; urgency=low

  * Non-maintainer upload.
  * Fix "FTBFS with perl 5.18: POD failure":
    add patch to add encoding to POD
    (Closes: #720431)

 -- gregor herrmann <gregoa@debian.org>  Fri, 30 Aug 2013 17:42:06 +0200

oar (2.5.2-3) unstable; urgency=low

  * Remove the desktop-computing packaging because it is no more supported
    (Closes: #676220).
  * Remove the conffiles  when purging the binary packages (Closes: #674657).
  * Override dh_compress to prevent debhelper to compress examples.
  * Use ucfr to register conffile.
  * Remove the ssh keys when purgin oar-node 

 -- Philippe Le Brouster <plb@nebkha.net>  Tue, 26 Jun 2012 12:23:42 +0200

oar (2.5.2-2) unstable; urgency=low

  * Rebuild for the debian archive. (Closes: #663558)

 -- Philippe Le Brouster <plb@nebkha.net>  Thu, 24 May 2012 12:47:49 +0200

oar (2.5.2-1) unstable; urgency=low

  * Imported Upstream version 2.5.2.
  * Remove the patch 0001-Fix-a-spelling-error-in-the-oaradmin-manpage (no
    more needed).
  * Update the debian copyright file.
  * Switch to debhelper 9.
  * Update properly CFLAGS
  * Override lintian warning: hardening-no-stackprotector
  * Add Vincent Danjean as Uploaders.

 -- Philippe Le Brouster <plb@nebkha.net>  Wed, 23 May 2012 17:00:53 +0200

oar (2.5.1-4) unstable; urgency=low

  * Add lintian overrides for empty binary packages.
  * Add lintian overrides for the install file.
  * Improve the short descriptions. 
  * Fix a spelling error in oaradmin manpage.
